[package]
name = "export"
version = "0.1.0"
edition = "2021"
license = "apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
base64 = "0.21.5"
serde = "1.0.193"
serde_json = "1.0.108"
tempfile = "3.8.1"

[dependencies]
thiserror = "1.0.50"
